--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -15,6 +17,6 @@
     min-width: 320px;
     min-height: 100vh;
     background-color: #f8fafc;
-    font-family: "Inter", system-ui, sans-serif;
+    font-family: "Poppins", sans-serif;
   }
 }
